<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.DetailArticleActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_topbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingHorizontal="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_left" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:layout_weight="1"
                android:fontFamily="@font/manrope_extrabold"
                android:text="Detail Article"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/iv_bookmark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_bookmark_fill" />

            <ImageView
                android:id="@+id/iv_language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:src="@drawable/ic_language_article" />

            <ImageView
                android:id="@+id/iv_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_share" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:fontFamily="@font/manrope_extrabold"
            android:text="@string/dummy_title_article"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:fontFamily="@font/manrope_bold"
            android:text="@string/dummy_author_article"
            android:textColor="#5E718D"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/manrope"
                android:text="@string/dummy_date_article"
                android:textColor="#5E718D"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:fontFamily="@font/manrope"
                android:text="@string/article_separator"
                android:textColor="@color/primary_green"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/manrope"
                android:text="Communication"
                android:textColor="@color/primary_green"
                android:textSize="12sp" />

        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="15dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@drawable/img_onboarding1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="15dp"
            android:gravity="center">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_badge_category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_article_badge"
                    android:fontFamily="@font/manrope"
                    android:paddingHorizontal="4dp"
                    android:paddingVertical="5dp"
                    android:text="Communication"
                    android:textColor="#8897AE"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_badge_duration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/bg_article_badge_primary"
                    android:fontFamily="@font/manrope_bold"
                    android:paddingHorizontal="4dp"
                    android:paddingVertical="5dp"
                    android:text="2 minutes read"
                    android:textColor="@color/primary_green"
                    android:textSize="12sp" />
            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:backgroundTint="@color/primary_green"
                android:elevation="0dp"
                app:cardCornerRadius="22dp"
                app:cardElevation="0dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_speaker" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <TextView
            android:id="@+id/tv_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:fontFamily="@font/manrope"
            android:text="@string/dummy_article_post"/>

    </LinearLayout>

</ScrollView>